# Programming3

./: .gitignore
Advanced/: Advanced.sln
Advanced/AnonymousTypes/: Program.cs
Advanced/Attributes/: Assertion.cs  Logger.cs  Program.cs
Advanced/Delegates/: Program.cs
Advanced/Enumeration/: FibonacciEnumerator.gen.cs  Program.cs  Stack.cs
Advanced/EventStandardPattern/: Client.cs  Program.cs  Stock.cs
Advanced/Events/: Client.cs  Program.cs  Stock.cs
Advanced/Exceptions/: Program.cs
Advanced/ExtensionMethods/: MyExtensions.cs  Program.cs
Advanced/Lambdas/: Program.cs
Advanced/Lamdas/: Program.cs
Advanced/Nullable/: Program.cs
Advanced/PatternMatching/: Program.cs
Advanced/PreprocessorDirectives/: PreprocessorDirectives.csproj  Program.cs
Advanced/Records/: Program.cs
Advanced/Tuples/: Program.cs
Advanced/XmlDocumentation/: ArrayMatrix.cs  Matrix.cs  SparseMatrix.cs  XmlDocumentation.csproj
Assembly/: Assembly.sln
Assembly/EmbeddedResources/: EmbeddedResources.csproj  Program.cs  Resources.Designer.cs  Resources.pl.resx  Resources.resx
Assembly/Plugin.Common/: ITextPlugin.cs
Basics/: Basics.sln
Basics/Types/: Point.cs  (+2 more)
Collections/: Collections.sln
Concurrency/: Concurrency.sln
CreatingTypes/: CreatingTypes.sln
Filesystem/: Filesystem.sln
FunctionalProgramming/: FunctionalProgramming.sln
Interoperability/: Interoperability.sln
Interoperability/HelloCpp/: CMakeLists.txt  Library.cpp  Library.h
Reflection/: Reflection.sln
Serialization/: Serialization.sln
Streams/: Streams.sln
Synchronization/: Synchronization.sln
(+163 files in other folders)
